[feat] HomeFunc 80% 구현 / LogRecorder 구현
- overview와 recentLogs 표현하는 UI 메세지 제작 (task 개수, 최근 다섯 개 log등의 출력 확인 완료) (팀 기능 완성 후 테스트 필요)
- MessageBuilder 관련 개편 (메서드 전부 수정, 불필요한 빌더 클래스는 제거 -> 뭔가 구조가 잘못됐다고 느껴짐, 추가수정예정)
- Utils에 LogRecorder 구현 (기존 LogLepo와 LogController 클래스 제거)