@@ -14,6 +14,7 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 // [ ProjectController 클래스 설명 ]
@@ -156,10 +157,12 @@ public class ProjectController extends Controller implements Adder, Getter<Task>
     public List<String> countTasksByStatus() {
         // [1] 유형별로 셀 수 있는 변수 준비
         int[] count = {0, 0, 0, tasks.size()};
-        // [2] task들 순회하면서 유형별로 count
-        this.getAll().forEach(task -> count[task.getStatus().ordinal()] += 1);
+        // [2] task들 순회하면서 유형별로 count (출력 순서는 완료-진행-대기라서 인덱스를 뒤집어줘야 함)
+        // [수정예정] 상수 2에서 빼는 방식 말고, reverse든 뭐든 방법을 찾아서 뒤집기
+        this.getAll().forEach(task -> count[2-task.getStatus().ordinal()] += 1);
         // [3] 각 갯수 모은 int 배열을 String List로 변환해 반환
-        return Arrays.stream(count).mapToObj(String::valueOf).toList();
+        // [메모] 바로 toList() 하면 그 List는 Immutable이라서, Collectors.toList()를 해야 add할 수 있음
+        return Arrays.stream(count).mapToObj(String::valueOf).collect(Collectors.toList());
     }
 
     public Collection<Task> getAll() {
